# thymeleaf_ls

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  debug.lua  index.html
.github/workflows/: ci.yml  release.yml
src/: code_actions.rs  completion.rs  diagnostics.rs  document.rs  folding.rs  fragmentref.rs  highlight.rs  hover.rs  links.rs  main.rs  navigation.rs  rename.rs  semantic_tokens.rs  symbols.rs  thymeleaf.rs  vault.rs
