[package]
name = "thymeleaf_ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
structured-logger = "1.0.3"
tokio = {version = "1.35.1", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-html = "0.19.0"
