[package]
name = "thymeleaf_ls"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A Language Server Protocol (LSP) implementation for Thymeleaf HTML templates."
authors = ["dozken <dosmukhamed@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dozken/thymeleaf_ls"
homepage = "https://github.com/dozken/thymeleaf_ls"
keywords = ["lsp", "thymeleaf", "language-server", "html", "tree-sitter"]
categories = ["development-tools", "text-editors"]
exclude = ["/.github", "/debug.lua", "/index.html"]

[dependencies]
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
structured-logger = "1.0.3"
tokio = {version = "1.35.1", features = ["full"] }
tower-lsp = "0.20.0"
tree-sitter = "0.20.10"
tree-sitter-html = "0.19.0"
walkdir = "2.5.0"
